--- a/chose_right.html
+++ b/chose_right.html
@@ -5,7 +5,7 @@
     
     <head>
 
-        <title>Can you find me?</title>
+        <title>Right side</title>
 
     </head>
 
@@ -67,8 +67,7 @@
 
             a:hover {
 
-                color: white;
-                text-decoration: none;
+                text-decoration: underline;
             }
 
             #scene {
