--- a/end.html
+++ b/end.html
@@ -19,7 +19,7 @@
 
          <img src="playerWins.png"  id="playerWins">
 
-         <p id="situation">You are brave! You could save a girl.</p>
+         <p id="situation">You are brave! You could save a girl. Go back to the <a href="index.html">ENTRANCE</a>.</p>
 
         
         </div>
