--- a/end.html
+++ b/end.html
@@ -48,6 +48,12 @@
 
         	}
 
+            a {
+
+                color: red;
+                text-decoration: none;
+            }
+
         	#scene {
 
         		background: url("horrer2.png") no-repeat;
