--- a/chose_open.html
+++ b/chose_open.html
@@ -23,7 +23,7 @@
 
 
 
-           <p id="situation">It was too late. Go back to the <a href="index.html">Entrance</a>.</p>
+           <p id="situation">It was too late. Go back to the <a href="index.html">ENTRANCE</a>.</p>
 
         
         </div>
