--- a/chose_fight.html
+++ b/chose_fight.html
@@ -328,7 +328,7 @@
 
          function goToLostPage(){
 
-             window.location.href = 'lost.html';
+             window.location.href = 'index.html';
          
          }
 
@@ -344,7 +344,7 @@
 
          function goToWonPage(){
 
-             window.location.href = 'won.html';
+             window.location.href = 'index.html';
          }
 
 
@@ -551,7 +551,7 @@
 
          function goToRanPage(){
 
-             window.location.href = 'ran.html'
+             window.location.href = 'index.html'
          }
 
          function run(){
