--- a/chose_fight.html
+++ b/chose_fight.html
@@ -237,7 +237,7 @@
          var playerAttackSound = new Audio('playerAttack.mp3');
          var zombieAttackSound = new Audio('zombieAttack.mp3');
          var runsound = new Audio('run.mp3');
-         var victorySong = new Audio('fighting.mp3');
+         var victorySong = new Audio('ending.mp3');
 
          var songStarted = false;
 
