--- a/chose_left.html
+++ b/chose_left.html
@@ -16,6 +16,8 @@
         
         <div id="scene">
 
+           <img src="witch.png"  id="witch">
+
 
            <p id="situation">Can you sacrifice yourself to save a girl? <a href="end.html">YES</a> or <a href="end2.html">NO</a> </p>
            
@@ -46,9 +48,9 @@
 
             #scene {
 
-                background-image: url(woman.png) no-repeat; 
-                height: 300px;
-                width: 500px;
+                background-image: url(horror6.png) no-repeat; 
+                height: 400px;
+                width: 711px;
 
                 position: absolute;
                 top: 20px;
@@ -66,6 +68,14 @@
                 background-color: rgba(0,0,0,.5);
                 width: 640px;
                 text-align: center;
+
+            }
+
+            #witch {
+
+                position: absolute;
+                top: -20px;
+                left: -20px;
 
             }
 
