--- a/end.html
+++ b/end.html
@@ -56,7 +56,7 @@
 
         	#scene {
 
-        		background: url("horrer2.png") no-repeat;
+        		background: url("horror2.png") no-repeat;
         		height: 400px;
         		width: 711px;
 
